testsuite/tests/ghc-regress/typecheck/should_fail/tcfail048.hs
module ShouldFail where

class (B a) => C a where
 op1 :: a -> a
